--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1>A Task App That Doesn't Stink</h1>
 
           <div class="hero-cta">
-            <a href="#" class="primary-cta">Try for free</a>
+            <a href="https://google.com/" class="primary-cta">Try for free</a>
             <a href="#" class="watch-video-cta">
               <img
                 id="video-icon"
@@ -174,5 +174,7 @@
         </div>
       </div>
     </section>
+    
+    <script src="index.js"></script>
   </body>
 </html>
