--- a/client/index.html
+++ b/client/index.html
@@ -175,6 +175,6 @@
       </div>
     </section>
     
-    <script src="index.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
